fix(dockerfile): jdk22